--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 
-  <h1>สวัสดี ฉันมะลิ! 🌿</h1>
+  <h1>สวัสดี มีเรื่องจะถาม! 🌿</h1>
   <img src="cat.jpg" alt="แมวน่ารัก" width="300">
-  <p>นี่คือแมวน่ารักของฉัน 🐱</p>
+  <p>ทำไมคนอ่านถึงขี้น้อยใจคะ 🐱</p>
 
 </body>
 </html>
